fix: added /ask endpoint to App.jsx

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                   name="message"
                   type="text"
                   className="chat-input"
-                  placeholder="Type your message..."
+                  placeholder="Ask a question"
                   disabled={loading}
                 />
                 <button
